changed background color to grey

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,11 +9,13 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      background-color: #202226; /* Add this line */
     }
 
     .rate-text {
       font-size: 48px;
       margin: 20px 0;
+      color: #ffffff; /* Add this line to set the text color to white */
     }
 
     .image-container {
