--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,18 +9,19 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      background-color: #202226; /* Add this line */
     }
 
     .rate-text {
       font-size: 48px;
       margin: 20px 0;
+      color: #ffffff; /* Add this line to set the text color to white */
     }
 
     .image-container {
       width: 300px;
       height: 300px;
     }
-
     .image-container img {
       width: 100%;
       height: auto;
@@ -41,7 +42,7 @@
   <iframe id="grafana-panel" src="" ></iframe>
 
   <script>
-    const grafanaPanelUrl = "http://localhost:3000/d/z1GpLQf4z/kpay1?orgId=2&refresh=5m&kiosk";
+    const grafanaPanelUrl = "http://localhost:3000/d/8dYSH_ggk/rate-dashboard?orgId=1&kiosk";
     document.getElementById("grafana-panel").src = grafanaPanelUrl;
 
     async function fetchData() {
